final commit fixed dashboard navigation having too much paddingremoved type:any

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -32,13 +32,19 @@ html {
   scrollbar-width: thin; // 'thin' or 'auto'
   scrollbar-color: #888 #f1f1f1; // Thumb color and track color
 
-  .sidebar, nav {
+  .sidebar,
+  nav {
     scrollbar-width: thin !important;
+  }
+
+  a {
+    color: #495057;
+    text-decoration: none;
   }
 }
 
 .searchBarContainer {
-   gap: 1rem !important;
+  gap: 1rem !important;
 }
 
 .hidden {
@@ -46,7 +52,7 @@ html {
 }
 
 .hidden-lg {
-   display: block !important;
+  display: block !important;
 }
 
 /* App.css */
